--- a/Dev/index.html
+++ b/Dev/index.html
@@ -108,6 +108,18 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../SimpleGCS" style="margin: 20px; display: inline-block;"><img src="../images/SimpleGCS_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Simple GCS</h2>
+      An example simple web based GCS. Setup for small boats
+      (eg. autonomous buoy). Supports wss to connect via ArduPilot
+      support server.
+    </td>
+  </tr>
+  
 </table>
 
 </body>
