TelemetryDashboard: update to use modules/MAVLink

--- a/TelemetryDashboard/Widgets/SandBox.html
+++ b/TelemetryDashboard/Widgets/SandBox.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Sandbox</title>
-    <script type="text/javascript" src="../MAVLink/mavlink.js"></script>
+    <script type="text/javascript" src="../../modules/MAVLink/mavlink.js"></script>
 </head>
 <body>
 </body>
