--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -23,7 +23,7 @@
 
     <script type="text/javascript" src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
 
-    <script type="text/javascript" src="MAVLink/mavlink.js"></script>
+    <script src="../modules/MAVLink/mavlink.js"></script>
 
     <script type="text/javascript" src="Widgets/Base_Class.js"></script>
     <script type="text/javascript" src="Widgets/Menu.js"></script>
