AILogAnalyzer:add tool in development section; add readme

--- a/AILogAnalyzer/index.html
+++ b/AILogAnalyzer/index.html
@@ -28,7 +28,7 @@
                 <div class="chat-input-area">
                     <input type="file" id="fileInput" accept=".bin,.log" />
                     <label for="fileInput" class="file-upload-label">
-                        Drop or click to upload .bin/.log files for analysis
+                        Click to upload .bin/.log files for analysis
                     </label>
                     <div class="input-group">
                         <input type="text" id="messageInput" placeholder="Ask about your flight data..." />
