--- a/Dev/index.html
+++ b/Dev/index.html
@@ -108,6 +108,17 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../AILogAnalyzer" style="margin: 20px; display: inline-block;"><img src="../images/AILogAnalyzer_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>AI Log Analyzer</h2>
+      AI Log Analyzer module
+      Use an AI agent to analyze your logs file
+    </td>
+  </tr>
+
 </table>
 
 </body>
