Analytictune: fix quadplane yaw params on page

--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -421,6 +421,7 @@
                                 <p>
                                         <input id="ATC_RAT_YAW_FLTD" name="ATC_RAT_YAW_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
                                 </p>
+                        </div>
                         <div id="QYawPIDS" style="display:none">
                                 <p>
                                         <input id="Q_A_ANG_YAW_P" name="Q_A_ANG_YAW_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
