StreamStats: pass null pageLoadDone function to `setup_open_in`

--- a/StreamStats/index.html
+++ b/StreamStats/index.html
@@ -116,7 +116,7 @@
   tippy('#TT')
 
 
-  const open_in_update = setup_open_in("OpenIn", "fileItem", function (data) { loading_call(() => { reset(); load_log(data) }) }, "right")
+  const open_in_update = setup_open_in("OpenIn", "fileItem", function (data) { loading_call(() => { reset(); load_log(data) }) }, null, "right")
 
   init_loading_overlay()
 
