Add SCurve tool

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -119,6 +119,16 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../SCurveTool" style="margin: 20px; display: inline-block;"><img src="../images/KinematicTool_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>SCurve Kinematic Tool</h2>
+      A tool to help understanding s-curve trajectories.
+    </td>
+  </tr>
+
 </table>
 
 </body>
