SCurveTool: fixup rebase issues

--- a/SCurveTool/index.html
+++ b/SCurveTool/index.html
@@ -293,7 +293,7 @@
   </fieldset>
 </fieldset>
 
-<h2 style="text-align:center">3D Flight path
+<h2 style="text-align:center;width:1130px">3D Flight path
   <img id="TT" src="../images/question-circle.svg" style="width: 1em; vertical-align: bottom" 
   data-tippy-content='3D plot of flight path',
   data-tippy-maxWidth='750px'/>
@@ -332,7 +332,7 @@
 </fieldset>
 </div>
 
-<h2 style="text-align:center">1D SCurves
+<h2 style="text-align:center;width:1130px" >1D SCurves
   <img id="TT" src="../images/question-circle.svg" style="width: 1em; vertical-align: bottom" 
   data-tippy-content='Computed SCurves along the vector of each leg',
   data-tippy-maxWidth='750px'/>
