KinematicTool: add jerk plot

--- a/KinematicTool/index.html
+++ b/KinematicTool/index.html
@@ -188,6 +188,7 @@
 <div id="ang_pos" style="width:1200px;height:300px"></div>
 <div id="ang_vel" style="width:1200px;height:300px"></div>
 <div id="ang_accel" style="width:1200px;height:300px"></div>
+<div id="ang_jerk" style="width:1200px;height:300px"></div>
 
 <script>
 
