HardwareReport: show vehicle config and output pins, use natural sort for params
- Add Vehicle Configuration section showing vehicle type (Copter/Plane/
  QuadPlane/Tailsitter/Tilt Rotor/Rover/Sub), frame class and frame type
- Add Output Configuration section showing SERVOx_FUNCTION assignments
  and DroneCAN ESC/Servo bitmasks
- Change param save ordering to natural sort matching MAVProxy and
  Mission Planner (e.g. RC2 before RC10)

Closes #242
Closes #244

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -54,6 +54,12 @@
 <h3 hidden>Internal Errors</h3>
 <p id="InternalError"></p>
 
+<h3 hidden>Vehicle Configuration</h3>
+<p id="VehicleConfig"></p>
+
+<h3 hidden>Output Configuration</h3>
+<p id="OutputConfig"></p>
+
 <h3 hidden>IOMCU</h3>
 <p id="IOMCU"></p>
 
